--- a/homework/homework.vcxproj
+++ b/homework/homework.vcxproj
@@ -129,10 +129,12 @@
   <ItemGroup>
     <ClCompile Include="Array.cpp" />
     <ClCompile Include="homework.cpp" />
+    <ClCompile Include="List.cpp" />
     <ClCompile Include="String.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h" />
+    <ClInclude Include="List.h" />
     <ClInclude Include="String.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
